Fix: large image is cropped in chrome

--- a/better-standalone-image.user.css
+++ b/better-standalone-image.user.css
@@ -19,6 +19,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  min-width: fit-content;
+  min-height: fit-content;
 }
 
 body > img {
